<resources>
    <string name="app_name">NBA Items Store</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login_btn">Login</string>
    <string name="register_btn">Register</string>
    <string name="login_title">Please enter your email and password</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="welcome_title">Welcome!</string>
    <string name="welcome_msg">Welcome to the NBA store</string>
    <string name="instructions_title">Instructions</string>
    <string name="instructions_msg">"1. Adding new item to the store by clicking the + btn\n2. Logging out by clicking the option menu button and then the logout button!\n3. Enjoy!"</string>
    <string name="item_list_title">Store Items</string>
    <string name="details_title">Please add all the details</string>
    <string name="name">Name</string>
    <string name="Price">price</string>
    <string name="item_type">Item type</string>
    <string name="item_currency">Item currency</string>
    <string name="details_error">Please make sure to fill all the details</string>
    <string name="logout_item">Logout</string>
</resources>