<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screens.details.DetailsFragment">

    <TextView
        android:id="@+id/detailsTitle"
        style="@style/TitleText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/details_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/top_vertical_margin"
        android:hint="@string/name"
        style="@style/TIL"
        app:layout_constraintBottom_toTopOf="@+id/priceTIL"
        app:layout_constraintEnd_toEndOf="@+id/detailsTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/detailsTitle"
        app:layout_constraintTop_toBottomOf="@+id/detailsTitle"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintVertical_chainStyle="packed">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/nameET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/priceTIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/Price"
        style="@style/TIL"
        app:layout_constraintBottom_toTopOf="@+id/typeTIL"
        app:layout_constraintEnd_toEndOf="@+id/nameTIL"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/nameTIL"
        app:layout_constraintTop_toBottomOf="@+id/nameTIL">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/priceET"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:inputType="numberDecimal" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/typeTIL"
        style="@style/Drop_Down_TIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/item_type"
        app:layout_constraintBottom_toTopOf="@+id/currencyTIL"
        app:layout_constraintEnd_toEndOf="@+id/detailsTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/detailsTitle"
        app:layout_constraintTop_toBottomOf="@+id/priceTIL">

        <AutoCompleteTextView
            android:id="@+id/typeACTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/currencyTIL"
        style="@style/Drop_Down_TIL"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:hint="@string/item_currency"
        app:layout_constraintBottom_toTopOf="@+id/addFAB"
        app:layout_constraintEnd_toEndOf="@+id/detailsTitle"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/detailsTitle"
        app:layout_constraintTop_toBottomOf="@+id/typeTIL">

        <AutoCompleteTextView
            android:id="@+id/currencyACTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="none" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addFAB"
        style="@style/Add_FAB"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>